# inv_dist

./: CMakeLists.txt
MS_Win/: inv_dist.sln  inv_dist.vcxproj  inv_dist.vcxproj.filters
src/: inverse_distances.h  main.cpp  smoothing.h  utils.h
test_data/: a07_top.irap  u01_2_KrP.irap
